--- a/client/app/event/event.css
+++ b/client/app/event/event.css
@@ -75,7 +75,7 @@
         
     }
    	.posts_wrapper	{
-   		background: rgb(240,240,240);
+   		background: #E4FDE1;
         width: 100%;
         float: left;
         z-index: 1000;
