--- a/client/app/dashboard/dashboard.css
+++ b/client/app/dashboard/dashboard.css
@@ -57,7 +57,7 @@
             width: 100%;
             overflow-x:hidden;
             /*background-color: white;*/
-            background:rgb( 221, 221, 221 );          
+                    
            padding: 0px;
            background-repeat: repeat;   
     }
@@ -67,12 +67,12 @@
         }
         #tagline_box{
             height: 150px;
-            background: rgb(0, 52, 89) none repeat scroll 0% 0%;
+            background: #028090;
             color: white;
             text-shadow:0px 0px 2px black;
-            font-family: "Times new roman";
+            font-family: arial, "Times new roman";
             padding: 40px 9.5%;
-            font-size: 30px;
+            font-size: 22px;
             line-height: 40px;
         }
         .tagline_box_fix{
