--- a/client/app/profile/profile.css
+++ b/client/app/profile/profile.css
@@ -1,5 +1,5 @@
             .box_shadow_dwn {
-                box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.16), 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
+                box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.16), 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
                 background-color: white !important;
                 border-radius: 0px !important;
                 border: 0px !important;
@@ -37,6 +37,7 @@
                border-radius: 50%;
                width: 25px;
                height: auto;
+               margin-right: 5px;
 
             }
             #profile    {
@@ -463,7 +464,8 @@
                 
             }
             #user_hist_div1  {
-                background:rgb(230,230,230);
+                background: white;
+                /*background:#E4FDE1;*/
                 z-index: 100;
                 position: relative;
                  
