--- a/client/components/navbar/navbar.css
+++ b/client/components/navbar/navbar.css
@@ -45,7 +45,7 @@ body {
         .top_logo_sec {
             height: 45px;            
             width:100%;
-            background-color: rgb(33,33,33);
+            background-color:#028090;
             background-size:10px 100%;
             box-sizing:border-box;
             box-shaddow:0px 5px 10px BLACK;
@@ -68,7 +68,7 @@ body {
         #hidden {
             height:65px;
             position: relative;
-            background-color:#00171f;
+            background-color:#028090;
             
             box-shadow: 0px 1px 4px black;
             /*background-color:#0a4b60;*/
@@ -148,9 +148,10 @@ body {
             padding:15.5px 0px;
             color: #2a6496;
         }
-        a:visited#_logo    {
+        #_logo    {
                 color:white;
         }
+
         a:visited#nav   {
             color:black;
         }
