--- a/client/app/club/club.css
+++ b/client/app/club/club.css
@@ -37,12 +37,12 @@
     padding: 2px 0px;
 }
 .list_heading{
-    color:white;
+    color:#028090;
     padding: 20px !important;
     width: 100%;
     position: relative;
     font-weight: bold;
-    background-color:  #028090;
+    background-color:  rgb(230,230,230);
     text-align: center;
     font-family: arial;
     font-size: 14px;
