--- a/client/app/profile/profile.css
+++ b/client/app/profile/profile.css
@@ -561,18 +561,21 @@
 
             #respectToast{
                 width:250px;
-                height:65px;
                 position:absolute;
                 bottom:30px;
                 right:30px;
                 z-index:1000;
-                background-color: #ff1654;
+                background-color:#028090 ;
                 font-size: 15px;
-                font-family: 'Abel';
                 text-shadow:0px 0px 5px grey;
                 color: white;
-                border-radius: 10px;
                 box-shadow: 0px 0px 5px grey;
+            }
+            #respectToast div{
+                padding: 10px; 
+                width: 100%;
+                text-align: center;               
+                font-family: 'Abel';
             }
 
             #textarea{ 
