--- a/client/app/profile/profile.css
+++ b/client/app/profile/profile.css
@@ -186,7 +186,7 @@
             } 
 
             .w2g    {
-                background-color: rgba(255,255,255,0.8);
+                background-color: rgb(255,255,255);
                 padding: 10px 10px !important;
                
                 border: 0px;
